# Cito

./: .gitignore  README.md
.github/workflows/: ci.yml
agent/: README.md  driver.go  go.mod  main.go  multicast.go  rtp.go  rtp_test.go
cloud/: .env.example  pyproject.toml
cloud/cito/: agent_link.py  announcements.py  audio.py  config.py  constants.py  delivery.py  documents.py  engine.py  pipeline.py  prompts.py  rtp.py  run.py  scheduler.py  tts.py
cloud/cito/sources/: __init__.py  base.py  calendar.py  stocks.py  weather.py
cloud/cito/spikes/: gemma_check.py  make_test_audio.py  rtp_send.py
cloud/cito/web/: announcements.html  app.py  index.html
cloud/tests/: test_agent_link.py  test_announcements.py  test_calendar.py  test_config.py  test_documents.py  test_engine.py  test_pipeline.py  test_prompts.py  test_rtp_packet.py  test_scheduler.py  test_sources.py  test_web.py
docs/: ai-pager-development-plan.md  ai-pager-spec.md
docs/superpowers/plans/: 2026-06-19-phase-0-foundations-rtp-spike.md  2026-06-19-phase-1-core-pipeline-and-console.md  2026-06-20-phase-2a-scheduler-announcements.md  2026-06-20-phase-2b-go-agent.md  2026-06-20-phase-3a-prompt-layer-voice.md  2026-06-20-phase-3b-document-input.md  2026-06-20-phase-3c-calendar-source.md
docs/superpowers/specs/: 2026-06-19-phase-0-foundations-rtp-spike-design.md  2026-06-19-phase-1-core-pipeline-and-console-design.md  2026-06-20-phase-2a-scheduler-announcements-design.md  2026-06-20-phase-2b-go-agent-design.md  2026-06-20-phase-3a-prompt-layer-voice-design.md  (+2 more)
shared/: README.md  agent-protocol.md
